--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,6 @@
-.container{
-	height: 500px;
-	width: 500px;
+#gameBoard{
+	height: 600px;
+	width: 600px;
 	border: 1px solid red;
 }
 
-#square {
-	height: 10px;
-	width: 10px;
-	background-color: black;
-}
