--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,24 @@
-body {
-	background: salmon;
-}
-
 #game-board {
 	height: 602px;
 	width: 602px;
+	border: 2px solid black;
+	margin: 30px 0px 0px 30px;
+	position: absolute;
+}
+
+#game-stats-container {
+	height: 664px;
+	width: 664px;
 	border: 1px solid black;
 	margin: 0 auto;
-	margin-top: 50px;
+	margin-top: 40px;
+}
+
+#left-side {
+	height: 500px;
+	width: 395px;
+	border: 1px solid green;
+	float: left;
 }
 
 .game-tile{
@@ -19,4 +30,10 @@ body {
 	border: 1px solid gray;
 }
 
+.container {
+	border: 1px solid black;
+	height: 800px;
+	width: 1600px;
+
+}
 
