--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,6 @@
-#game-board {
+#game-board{
 	height: 602px;
 	width: 602px;
-	border: 2px solid black;
-	margin: 30px 0px 0px 30px;
-	position: absolute;
-}
-
-#game-stats-container {
-	height: 662px;
-	width: 662px;
 	border: 1px solid black;
 	margin: 0 auto;
 	margin-top: 40px;
@@ -37,3 +29,27 @@
 
 }
 
+.hovered {
+	background-color: red;
+}
+
+.piece-00, .piece-01, .piece-02, .piece-03, .piece-04, .piece-05, .piece-06, .piece-07, 
+.piece-08, .piece-09, .piece-10, .piece-11, .piece-12, .piece-13, .piece-14, .piece-15, 
+.piece-16, .piece-17, .piece-18, .piece-19, .piece-20 
+{
+  background-image: url('../images/Blokus-pieces-25.png');
+  background-repeat: no-repeat;
+  display: inline-block;
+}
+
+.piece-19 {
+	height: 500px;
+	width: 500px;
+	background-position: -60px 0px;
+}
+
+.piece-20 {
+	height: 40px;
+	width: 36px;
+	background-position: -60px 10px;
+}
