--- a/css/open.css
+++ b/css/open.css
@@ -9,13 +9,14 @@ body {
 
 #title {
   position: absolute;
-  top: 25%;
-  left: 37%;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   color: white;
 }
 
 #title h1 {
-  font-size: 50px;
+  font-size: 70px;
 }
 
 #title small {
