--- a/css/main.css
+++ b/css/main.css
@@ -1,222 +1,262 @@
-body {
-	background: url(../images/woodbg.jpg);
-	font-family: 'News Cycle', sans-serif;
-	width: 100%;
-}
-
 h1 {
-  color: #68CC01;
-  margin-top: 10px;
-  float: right;
-	font-family: 'News Cycle', sans-serif;
+  visibility: hidden;
 }
 
-p {
-	text-align: center;
-	margin: 0 auto;
-	font-family: 'News Cycle', sans-serif;
-}
-
-.btn {
-  border-radius: 0;
-}
-
-.container {
-	height: 800px;
-	width: 1375px;
-	margin: 0 auto;
-}
-
-.game-tile{
-  float: left;
-  font-size: 0;
-  display: inline-block;
-  height: 29.9px;
-  width: 29.9px;
-  border: 1.5px solid #8C8C8C;
-  background-color: #CBCBCB;
-}
-
-.hovered {
-  opacity: .5;
-}
-
-.hovered.blue {
-  background-color: blue;
-}
-
-.hovered.yellow {
-  background-color: yellow;
-}
-
-.hovered.red {
-  background-color: red;
-}
-
-.hovered.green {
-  background-color: green;
+h2 {
+  color: white;
 }
 
 #button {
-  background: #FFF334;
-  color: #0196CC;
+  visibility: hidden;
 }
 
-#game-board{
-  height: 600px;
-  width: 600px;
-  border: 1px solid gray;
-  border-radius: 0.5;
+.center {
   position: absolute;
-  left: 70%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  text-align: center;
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 100px;
 }
 
-#left-side {
-  height: 600px;
-  width: 400px;
-  border: 2px dashed black;
-  position: absolute;
-  left: 25%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
+body {
+    background: url(../images/woodbg.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size:cover;
+    font-family: 'News Cycle', sans-serif;
+    width: 100%;
+  }
 
-#piece-0, #piece-1, #piece-2, #piece-3, #piece-4, #piece-5, #piece-6, #piece-7, 
-#piece-8, #piece-9, #piece-10, #piece-11, #piece-12, #piece-13, #piece-14, #piece-15, 
-#piece-16, #piece-17, #piece-18, #piece-19, #piece-20 
-{
-  background-image: url('../images/red-25.png');
-  background-repeat: no-repeat;
-  display: inline-block;
-  margin-left: 15px;  
-  margin-bottom: 15px;
-  margin-top: 10px;
-}
+@media (min-width: 1050px){
+  
+  h1 {
+    float: right;
+    visibility: visible;
+    text-align: right;
+    color: #68CC01;
+    margin-top: 10px;
+    right: 10px;
+  	font-family: 'News Cycle', sans-serif;
+  }
 
-#piece-0{
-  height: 116px;
-  width: 30px;
-  background-position: -475px -119px;
-}
+  h2 {
+    display: none;
+  }
 
-#piece-1{
-  height: 54px;
-  width: 96px;
-  background-position: 3px -140px;
-}
+  p {
+  	text-align: center;
+  	margin: 0 auto;
+  	font-family: 'News Cycle', sans-serif;
+  }
 
-#piece-2{
-  height: 55px;
-  width: 98px;
-  background-position: -279px -140px;
-}
+  .btn {
+    border-radius: 0;
+  }
 
-#piece-3{
-  height: 55px;
-  width: 100px;
-  background-position: -400px -238px;
-}
+  .container {
+  	height: 100vh;
+  	width: 100%;
+  	margin: 0 auto;
+  }
 
-#piece-4{
-  height: 75px;
-  width: 77px;
-  background-position: -235px -205px;
-}
+  .game-tile{
+    float: left;
+    font-size: 0;
+    display: inline-block;
+    height: 29.9px;
+    width: 29.9px;
+    border: 1px solid #8C8C8C;
+    background-color: #CBCBCB;
+  }
 
-#piece-5{
-  height: 76px;
-  width: 76px;
-  background-position: -322px -205px;
-}
+  .hovered {
+    opacity: .5;
+  }
 
-#piece-6{
-  height: 76px;
-  width: 54px;
-  background-position: -148px -205px;
-}
+  .hovered.blue {
+    background-color: blue;
+  }
 
-#piece-7{
-  height: 75px;
-  width: 56px;
-  background-position: 5px -205px;
-}
+  .hovered.yellow {
+    background-color: yellow;
+  }
 
-#piece-8{
-  height: 80px;
-  width: 80px;
-  background-position: -60px -200px;
-}
+  .hovered.red {
+    background-color: red;
+  }
 
-#piece-9{
-  height: 76px;
-  width: 76px;
-  background-position: -105px -118px;
-}
+  .hovered.green {
+    background-color: green;
+  }
 
-#piece-10{
-  height: 75px;
-  width: 76px;
-  background-position: -192px -118px;
-}
+  #button {
+    visibility: visible;
+    background: #FFF334;
+    color: #0196CC;
+  }
 
-#piece-11{
-  height: 76px;
-  width: 76px;
-  background-position: -387px -118px;
-}
+  #game-board{
+    box-sizing: border-box;
+    height: 600px;
+    width: 600px;
+    border: 1px solid gray;
+    border-radius: 0.5;
+    position: absolute;
+    left: 70%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
 
-#piece-12{
-  height: 35px;
-  width: 100px;
-  background-position: -190px -73px;
-}
+  #left-side {
+    height: 70%;
+    width: 400px;
+    border: 2px dashed black;
+    position: absolute;
+    left: 20%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
 
-#piece-13{
-  height: 54px;
-  width: 78px;
-  background-position: -430px -53px;
-}
+  #piece-0, #piece-1, #piece-2, #piece-3, #piece-4, #piece-5, #piece-6, #piece-7, 
+  #piece-8, #piece-9, #piece-10, #piece-11, #piece-12, #piece-13, #piece-14, #piece-15, 
+  #piece-16, #piece-17, #piece-18, #piece-19, #piece-20 
+  {
+    background-image: url('../images/red-25.png');
+    background-repeat: no-repeat;
+    display: inline-block;
+    margin-left: 15px;  
+    margin-bottom: 15px;
+    margin-top: 10px;
+  }
 
-#piece-14{
-  height: 55px;
-  width: 55px;
-  background-position: 4px -52px;
-}
+  #piece-0{
+    height: 116px;
+    width: 30px;
+    background-position: -475px -119px;
+  }
 
-#piece-15{
-  height: 55px;
-  width: 78px;
-  background-position: -82px -52px;
-}
+  #piece-1{
+    height: 54px;
+    width: 96px;
+    background-position: 3px -140px;
+  }
 
-#piece-16{
-  height: 60px;
-  width: 80px;
-  background-position: -320px -50px;
-}
+  #piece-2{
+    height: 55px;
+    width: 98px;
+    background-position: -279px -140px;
+  }
 
-#piece-17 {
-  height: 30px;
-  width: 78px;
-  background-position: -365px -10px;
-}
+  #piece-3{
+    height: 55px;
+    width: 100px;
+    background-position: -400px -238px;
+  }
 
-#piece-18 {
-  height: 55px;
-  width: 60px;
-  background-position: -255px -10px;
-}
+  #piece-4{
+    height: 75px;
+    width: 77px;
+    background-position: -235px -205px;
+  }
 
-#piece-19 {
-  height: 30px;
-  width: 55px;
-  background-position: -147px -10px;
-}
+  #piece-5{
+    height: 76px;
+    width: 76px;
+    background-position: -322px -205px;
+  }
 
-#piece-20 {
-  height: 30px;
-  width: 36px;
-  background-position: -60px -10px;
+  #piece-6{
+    height: 76px;
+    width: 54px;
+    background-position: -148px -205px;
+  }
+
+  #piece-7{
+    height: 75px;
+    width: 56px;
+    background-position: 5px -205px;
+  }
+
+  #piece-8{
+    height: 80px;
+    width: 80px;
+    background-position: -60px -200px;
+  }
+
+  #piece-9{
+    height: 76px;
+    width: 76px;
+    background-position: -105px -118px;
+  }
+
+  #piece-10{
+    height: 75px;
+    width: 76px;
+    background-position: -192px -118px;
+  }
+
+  #piece-11{
+    height: 76px;
+    width: 76px;
+    background-position: -387px -118px;
+  }
+
+  #piece-12{
+    height: 35px;
+    width: 100px;
+    background-position: -190px -73px;
+  }
+
+  #piece-13{
+    height: 54px;
+    width: 78px;
+    background-position: -430px -53px;
+  }
+
+  #piece-14{
+    height: 55px;
+    width: 55px;
+    background-position: 4px -52px;
+  }
+
+  #piece-15{
+    height: 55px;
+    width: 78px;
+    background-position: -82px -52px;
+  }
+
+  #piece-16{
+    height: 60px;
+    width: 80px;
+    background-position: -320px -50px;
+  }
+
+  #piece-17 {
+    height: 30px;
+    width: 78px;
+    background-position: -365px -10px;
+  }
+
+  #piece-18 {
+    height: 55px;
+    width: 60px;
+    background-position: -255px -10px;
+  }
+
+  #piece-19 {
+    height: 30px;
+    width: 55px;
+    background-position: -147px -10px;
+  }
+
+  #piece-20 {
+    height: 30px;
+    width: 36px;
+    background-position: -60px -10px;
+  }
+
 }
