--- a/css/main.css
+++ b/css/main.css
@@ -34,9 +34,7 @@ body {
 @media (min-width: 1050px){
   
   h1 {
-    float: right;
     visibility: visible;
-    text-align: right;
     color: #68CC01;
     margin-top: 10px;
     right: 10px;
@@ -128,9 +126,9 @@ body {
     background-image: url('../images/red-25.png');
     background-repeat: no-repeat;
     display: inline-block;
-    margin-left: 15px;  
-    margin-bottom: 15px;
-    margin-top: 10px;
+    margin-left: 3%;  
+    margin-bottom: 2%;
+    margin-top: 2%;
   }
 
   #piece-0{
