--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+html {
+  font-family: 'Playfair Display', serif;
+}
 h1 {
   visibility: hidden;
 }
@@ -27,7 +30,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size:cover;
-    font-family: 'News Cycle', sans-serif;
+    font-family: 'Playfair Display', serif;
     width: 100%;
   }
 
@@ -38,7 +41,6 @@ body {
     color: #68CC01;
     margin-top: 10px;
     right: 10px;
-  	font-family: 'News Cycle', sans-serif;
   }
 
   h2 {
@@ -48,7 +50,6 @@ body {
   p {
   	text-align: center;
   	margin: 0 auto;
-  	font-family: 'News Cycle', sans-serif;
   }
 
   .btn {
